# gin

./: .gitmodules  CMakeLists.txt  README.md  fmd.c  gin.c  main.c
benchmark/res/: query.fmdq
benchmark/res/graph/: graph.fmdg
benchmark/res/index/: index.fmdi
benchmark/res/permutation/: GRCh38-20-0.10b_ptime_3600_pdepth_12_threads_16.ginp
benchmark/scripts/: benchmark.sh  benchmark_all.sh  benchmark_annotation_fast_hard.sh  benchmark_annotation_hard.sh  benchmark_exon.sh  benchmark_pangenome.sh  benchmark_pangenome_fast_hard.sh  benchmark_pangenome_hard.sh  benchmark_parallelism_fast_hard.sh  benchmark_query_speed_vs_cache_depth.sh  benchmark_query_speed_vs_cached_query_length.sh  benchmark_query_speed_vs_graph_density.sh  benchmark_query_speed_vs_matches_returned.sh  benchmark_query_speed_vs_ml.sh  benchmark_query_speed_vs_ml_64.sh  benchmark_query_speed_vs_no_bipartite_vertices.sh  benchmark_query_speed_vs_no_connected_vertices.sh  benchmark_query_speed_vs_num_threads.sh  benchmark_query_speed_vs_permutation_depth.sh  benchmark_query_speed_vs_permutation_depth_variable_time.sh  benchmark_query_speed_vs_permutation_time.sh  benchmark_query_speed_vs_permutation_time_no_index.sh  benchmark_query_speed_vs_query_length.sh  benchmark_query_speed_vs_sample_rate.sh  benchmarkp.sh  bootstrap.sh  bootstrap_dir.sh  build_benchmark.sh  build_bin.sh  clean.sh  clean_all.sh  clean_pipeline.sh  clean_query_speed_vs_cache_depth.sh  clean_query_speed_vs_cached_query_length.sh  clean_query_speed_vs_graph_density.sh  clean_query_speed_vs_matches_returned.sh  clean_query_speed_vs_ml.sh  clean_query_speed_vs_no_bipartite_vertices.sh  clean_query_speed_vs_no_connected_vertices.sh  clean_query_speed_vs_num_threads.sh  (+32 more)
benchmark/scripts/generate_graphs/: generate_ideal_graph.py
benchmark/scripts/stats_graphs/: generate_complexities.sh  generate_fmdg_stats.pl  generate_path_histogram.pl  kmer_spectrum.sh  vertex_complexity.pl  vertex_complexity_scaled.pl
benchmark/utils/: flatten_fmdg.pl  sample_file.pl
decoder/: fmd_decode_paths.pl  fmd_decode_paths_cmp.pl  gin_decode_paths.pl  gin_validate_paths.pl
include/: fmd_annealing.h  fmd_bitstream.h  fmd_common.h  fmd_constraint_set.h  fmd_encoded_graph.h  fmd_fmd.h  fmd_fmd_sdsl.h  fmd_fmi.h  fmd_fuzzy.h  fmd_graph.h  fmd_interval_merge_tree.h  fmd_match_chain.h  fmd_match_list.h  fmd_min_heap.h  fmd_oimt.h  fmd_string.h  fmd_table.h  fmd_tree.h  fmd_vector.h  fmdg_parser.h  gin_annealing.h  gin_bitstream.h  gin_common.h  gin_constraint_set.h  gin_dna_fmi.h  gin_encoded_graph.h  gin_fmi.h  gin_gin.h  gin_graph.h  gin_interval_merge_tree.h  gin_min_heap.h  gin_oimt.h  gin_string.h  gin_table.h  gin_tree.h  gin_vector.h  ging_parser.h  permutation_parser.h  rgfa_parser.h
include/legacy/: fmd_fmd_ih.h  fmd_fmd_sdsl.h
res/: graph.fmdg  graph.ging  index.fmdi  query.fmdq
src/: fmd_annealing.c  fmd_bitstream.c  fmd_constraint_set.c  fmd_encoded_graph.c  fmd_fmd.c  fmd_fmd_sdsl.c  fmd_fmi.c  fmd_fuzzy.c  fmd_graph.c  fmd_interval_merge_tree.c  fmd_match_chain.c  fmd_match_list.c  fmd_min_heap.c  fmd_oimt.c  fmd_string.c  fmd_table.c  fmd_tree.c  fmd_vector.c  gin_annealing.c  gin_bitstream.c  gin_constraint_set.c  gin_dna_fmi.c  gin_encoded_graph.c  gin_fmi.c  gin_gin.c  gin_graph.c  gin_interval_merge_tree.c  gin_min_heap.c  gin_oimt.c  gin_string.c  gin_table.c  gin_tree.c  gin_vector.c
src/legacy/: fmd_fmd_ih.c  fmd_fmd_sdsl.c
tests/: fmd_annealing_test.c  fmd_constraint_set_statistics_test.c  fmd_constraint_set_test.c  fmd_constraint_sets.c  fmd_fmi.c  fmd_gfa_parse.c  fmd_leak_test.c  fmd_permutation_sanity_check.c  fmd_query.c  fmd_rgfa_permutation_annealing_test.c  fmd_sa_test.c  fmd_serial_test.c  fmd_serialize.c  gin_fmi.c  gin_gfa_parse.c  gin_leak_test.c  gin_permutation_sanity_check.c  gin_query.c  gin_rgfa_permutation_annealing_test.c  gin_sa_test.c  gin_serialize.c
tests/legacy/: fmd_annealing_test.c  fmd_constraint_set_test.c  gin_annealing_test.c  gin_constraint_set_statistics_test.c  gin_constraint_set_test.c  gin_serial_test.c
tools/: gencode-2-fmdg  gencode-2-ging  gin-cmp.sh
wrapper/: sdsl_wrapper.cpp  sdsl_wrapper.h
